디자인 토큰 주입